--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -59,3 +59,56 @@
   month = jan 
 }
 
+@ARTICLE{doubleU,
+  author  = {Belkin, Mikhail and Hsu, Daniel and Ma, Siyuan and Mandal, Soumik},
+  title = "{Reconciling modern machine learning practice and the bias-variance trade-off}",
+  journal = {ArXiv e-prints},
+  archivePrefix = "arXiv",
+  eprint = {1812.11118v2},
+  keywords = {Deep Learning - Overfitting},
+  year = 2019,
+  month = sep 
+}
+
+@ARTICLE{lottery,
+  author  = {Frankle, Jonathan and Carbin, Michael},
+  title = "{The Lottery Ticket Hypothesis: Finding Sparse, Trainable Neural Networks}",
+  journal = {ArXiv e-prints},
+  archivePrefix = "arXiv",
+  eprint = {1803.03635v5},
+  keywords = {Deep Learning - Overfitting},
+  year = 2019,
+  month = mar 
+}
+
+@inproceedings{inproceedings,
+  author = {Caruana, Rich and Lawrence, Steve and Giles, C.},
+  year = {2000},
+  month = {01},
+  pages = {402-408},
+  title = {Overfitting in Neural Nets: Backpropagation, Conjugate Gradient, and Early Stopping.},
+  volume = {13},
+  journal = {Advances in Neural Information Processing Systems}
+}
+
+@ARTICLE{rethink,
+  author  = {Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
+  title = "{Understanding Deep learning requires Rethinking Generalization}",
+  journal = {ArXiv e-prints},
+  archivePrefix = "arXiv",
+  eprint = {1611.03530v2},
+  keywords = {Deep Learning - Overfitting},
+  year = 2017,
+  month = feb 
+}
+
+@article{weng2019overfit,
+  title   = "Are Deep Neural Networks Dramatically Overfitted?",
+  author  = "Weng, Lilian",
+  journal = "lilianweng.github.io/lil-log",
+  year    = "2019",
+  url     = "http://lilianweng.github.io/lil-log/2019/03/14/are-deep-neural-networks-dramatically-overfitted.html"
+}
+
+
+
