--- a/parameters_slide.ipynb
+++ b/parameters_slide.ipynb
@@ -165,7 +165,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plotting #"
+    "# Plotting #\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set_style('darkgrid')\n",
+    "\n",
+    "callfile = 'saved_models/mnist_doubleU_shaped.csv'\n",
+    "\n",
+    "df = pd.read_csv(callfile)\n",
+    "\n",
+    "df['error']     = 1 - df['accuracy']\n",
+    "df['val_error'] = 1-df['val_accuracy']\n",
+    "\n",
+    "# Data extraction\n",
+    "epoch_cond = df['epochs'] == np.unique(df['epochs'].unique()).max()\n",
+    "\n",
+    "data = df[epoch_cond]\n",
+    "\n",
+    "def plot():\n",
+    "\n",
+    "  fig, (ax, ax1) = plt.subplots(nrows=1, ncols=2, figsize=(10, 5))\n",
+    "\n",
+    "  data.plot(ax=ax, x='params', y='loss', label='train_loss', marker='+')\n",
+    "  data.plot(ax=ax, x='params', y='val_loss', label='test_loss', marker='+')\n",
+    "  ax.legend(fontsize=15)\n",
+    "\n",
+    "  data.plot(ax=ax1, x='params', y='error', label='train_error', marker='+')\n",
+    "  data.plot(ax=ax1, x='params', y='val_error', label='test_error', marker='+')\n",
+    "  ax1.legend(fontsize=15)\n",
+    "\n",
+    "  plt.show();\n",
+    "\n",
+    "plot()"
    ]
   }
  ],
